@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2013-11-19 r64265) -- "Unsuffered Consequences"
+R Under development (unstable) (2013-11-20 r64271) -- "Unsuffered Consequences"
 Copyright (C) 2013 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -1148,7 +1148,6 @@ Residual standard error: 0.04103 on 7 degrees of freedom
 > 
 > 
 > 
-> graphics::par(get("par.postscript", pos = 'CheckExEnv'))
 > cleanEx()
 > nameEx("SSfol")
 > ### * SSfol
